# astro-swap

./: .env.example  .env.production.example  .gitignore  .vercelignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  vercel.json
.cargo/: config.toml
.claude/agents/: amm-pool-auditor.md  dex-security.md  router-validator.md  sdk-reviewer.md
.claude/skills/: sdk-patterns.md
.deployed/: aggregator.testnet.hash  aggregator.testnet.id  bridge.testnet.hash  bridge.testnet.id  deployment.testnet.json  factory.testnet.hash  factory.testnet.id  pair.testnet.hash  router.testnet.hash  router.testnet.id  staking.testnet.hash  staking.testnet.id
.github/: CICD_SUMMARY.md  FILES_CREATED.md  WORKFLOWS_GUIDE.md  WORKFLOWS_QUICKSTART.md  verify-workflows.sh
.github/workflows/: README.md  build.yml  deploy-testnet.yml  lint.yml  sdk.yml  test.yml
contracts/aggregator/: Cargo.toml
contracts/aggregator/src/: lib.rs  storage.rs
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs  storage.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  lib.rs  storage.rs
contracts/oracle/: Cargo.toml  README.md
contracts/oracle/src/: contract.rs  error.rs  lib.rs  storage.rs  twap.rs
contracts/pair/: Cargo.toml
contracts/pair/src/: contract.rs  lib.rs  storage.rs  tests.rs  token.rs
contracts/router/: Cargo.toml
contracts/router/src/: contract.rs  lib.rs  storage.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: error.rs  events.rs  interfaces.rs  lib.rs  math.rs  types.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: contract.rs  lib.rs  storage.rs
contracts/staking/test_snapshots/contract/tests/: test_initialize.1.json
contracts/tests/: Cargo.toml  README.md
contracts/tests/src/: lib.rs  mock_token.rs  test_aggregator.rs  test_bridge.rs  test_full_swap.rs  test_multi_hop.rs  test_staking.rs  test_utils.rs
contracts/tests/test_snapshots/test_aggregator/: test_aggregator_admin_transfer.1.json  test_aggregator_config_update.1.json  test_aggregator_fee_recipient.1.json  test_aggregator_fee_too_high_rejected.1.json  test_aggregator_initialization.1.json  test_aggregator_pause.1.json  test_aggregator_single_protocol_swap.1.json  test_disable_protocol.1.json  test_get_all_quotes.1.json  test_register_multiple_protocols.1.json  test_route_not_found_for_missing_pair.1.json  test_swap_with_precomputed_route.1.json
contracts/tests/test_snapshots/test_bridge/: test_bridge_admin_transfer.1.json  test_bridge_initialization.1.json  test_bridge_pause.1.json  test_cannot_graduate_twice.1.json  test_complete_graduation_flow.1.json  test_get_graduation_by_index.1.json  test_graduation_with_zero_liquidity_rejected.1.json  test_initial_price_calculation.1.json  test_only_launchpad_can_graduate.1.json  test_update_launchpad_address.1.json
contracts/tests/test_snapshots/test_full_swap/: test_add_liquidity_with_ratio_adjustment.1.json  test_cannot_create_duplicate_pair.1.json  test_expired_deadline_rejected.1.json  test_full_swap_flow.1.json  test_minimum_liquidity_lock.1.json  test_swap_tokens_for_exact_tokens.1.json  test_swap_with_slippage_protection.1.json
contracts/tests/test_snapshots/test_multi_hop/: test_invalid_path_rejected.1.json  test_multi_hop_slippage_protection.1.json  test_price_impact_increases_with_amount.1.json  test_reverse_path_gives_different_rate.1.json  test_three_hop_swap.1.json  test_two_hop_swap.1.json
contracts/tests/test_snapshots/test_staking/: test_cannot_stake_zero.1.json  test_complete_staking_flow.1.json  test_multiple_stakers_share_rewards.1.json  test_partial_unstake.1.json  test_rewards_stop_at_end_time.1.json  test_staking_after_pool_starts.1.json
contracts/tests/test_snapshots/test_utils/tests/: test_context_creation.1.json
frontend/: .env.example  CHECKLIST.md  Dockerfile  PROJECT_SUMMARY.md  README.md  SETUP.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/hooks/: usePool.ts  useSimulation.ts  useStaking.ts  useSwap.ts  useTokenApproval.ts  useTokenBalance.ts  useTokenIndexer.ts  useTokens.ts
frontend/src/lib/: contracts.ts  errors.ts  sentry.ts  stellar.ts  token-indexer.ts  utils.ts  wallet-kit.ts
frontend/src/pages/: Bridge.tsx  Dashboard.tsx  Pool.tsx  Staking.tsx  Swap.tsx
frontend/src/stores/: settingsStore.ts  tokenStore.ts  transactionStore.ts  walletStore.ts
frontend/src/types/: index.ts
indexer/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  package.json  tsconfig.json
indexer/prisma/: schema.prisma
indexer/scripts/: setup.sh
indexer/src/: api.ts  index.ts  listener.ts  logger.ts  types.ts  utils.ts
indexer/src/middleware/: index.ts  security.ts
indexer/src/monitoring/: index.ts
scripts/: deploy-vercel.sh  deploy.sh
sdk/: .eslintrc.cjs  QUICK_START_ROUTER.md  README.md  ROUTER_SDK.md  TEST_SUMMARY.md  package.json  pnpm-lock.yaml  tsconfig.json
sdk/examples/: router-example.ts
sdk/src/: client.ts  index.ts  types.ts  utils.ts
sdk/src/__tests__/: README.md  client.test.ts  types.test.ts  utils.test.ts
sdk/src/contracts/: aggregator.ts  base.ts  (+6 more)
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: graduation_flow.rs
tests/stress/: Cargo.toml  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md
tests/stress/scripts/: analyze_results.py  run_load_test.sh  run_stress_test.sh
tests/stress/src/: config.rs  lib.rs
tests/stress/src/metrics/: collector.rs  mod.rs  reporter.rs
tests/stress/src/scenarios/: concurrent.rs  mod.rs  pool_stress.rs  router_paths.rs  swap_load.rs
tests/stress/src/utils/: accounts.rs  mod.rs  tokens.rs
(+94 files in other folders)
